Initial Backend, Moving AllLanguages component to main component, change Header laytou

--- a/Frontend/src/app/components/header/header.component.html
+++ b/Frontend/src/app/components/header/header.component.html
@@ -1,8 +1,7 @@
 <header>
-  <p routerLink=""> ProgrammingLanguages </p>
-  <button routerLink="all"> All languages</button>
   <button> Random language </button>
   <button> Tiobe index </button>
+  <p routerLink=""> ProgrammingLanguages </p>
   <button> Github projects</button>
-  <button> Project Repository</button>
+  <a href="https://github.com/Tiguarces/ProgrammingLanguages" target="_blank"> Project Repository</a>
 </header>
