--- a/Frontend/src/app/components/header/header.component.css
+++ b/Frontend/src/app/components/header/header.component.css
@@ -1,62 +1,33 @@
 header {
-  width: 100vw;
+  width: 10%;
   height: 5vh;
-  background-color: darkslategrey;
+  background-color: oldlace;
 
   display: flex;
   align-items: center;
   justify-content: center;
   border-bottom: 2px solid black;
+  border-right: 2px solid black;
+  border-bottom-right-radius: 25px;
+
   box-sizing: border-box;
 }
 
 header > * {
   height: 100%;
-  width: 15%;
+  width: 50%;
 
   display: flex;
+  font-size: xx-large;
   align-items: center;
   justify-content: center;
 }
 
-header > p {
-  width: 20%;
-  color: wheat;
-  text-shadow: 1px 1px 1px darkgray;
-  letter-spacing: 1px;
-  font-size: large;
-  border-right: 2px solid black;
-  cursor: pointer;
-  transition-duration: 500ms;
+header > a:hover {
+  transition-duration: 250ms;
+  color: rgb(29, 116, 104);
 }
 
-header > p:hover {
-  color: rgb(250, 231, 196);
-  background-color: rgb(50, 88, 88);
-}
-
-header > button:first-child {
-  border-left: 1px solid black;
-}
-
-header > button, a {
-  outline: none;
-  border: none;
-
-  font-size: 13.5px;
-  cursor: pointer;
-  background-color: rgb(221, 218, 218);
-  transition-duration: 500ms;
-  border-right: 3px solid black;
-}
-
-header > button:hover, a:hover {
-  color: white;
-  text-shadow: 1px 1px 1px darkgray;
-  background-color: rgb(67, 150, 165);
-}
-
-a {
-  text-decoration: none;
+header > a {
   color: black;
 }
