--- a/Frontend/src/app/components/lang/lang.component.css
+++ b/Frontend/src/app/components/lang/lang.component.css
@@ -26,8 +26,8 @@ main {
 }
 
 #logo > img {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 80%;
+  max-height: 80%;
 }
 
 #specification {
@@ -58,6 +58,7 @@ main {
 
 #specification > table {
   padding: .5%;
+  width: 100%;
   box-sizing: border-box;
 }
 
@@ -88,8 +89,9 @@ main {
 }
 
 #menu {
+  margin-top: 1%;
   width: 83vw;
-  height: 46vh;
+  min-height: 46vh;
   background-color: rgb(173, 170, 166);
   border-radius: 15px;
 }
@@ -129,13 +131,16 @@ main {
 
   font-size: 22px;
   letter-spacing: 0.2px;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #trends {
   display: none;
-  padding: 1%;
   box-sizing: border-box;
-  height: 100%;
+  height: 99%;
   align-items: center;
   justify-content: center;
 }
@@ -178,10 +183,10 @@ main {
 
 .repoDesc {
   height: 20%;
-  width: 100%;
+  width: 95%;
 }
 
-.repoStairs {
+.repoStars {
   height: 15%;
   width: 100%;
 
@@ -189,6 +194,7 @@ main {
   text-shadow: 1px 1px 1px darkgray;
   background-color: rgb(73, 163, 50);
 }
+
 
 #website > a {
   text-decoration: none;
