--- a/Frontend/src/app/components/lang/lang.component.html
+++ b/Frontend/src/app/components/lang/lang.component.html
@@ -1,52 +1,56 @@
 <main>
   <div id="logo">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/240px-Ruby_logo.svg.png">
+    <img [src]="details.thumbnailPath">
   </div>
 
   <div id="specification">
       <table>
         <tr id="langName">
-          <td> <b>Ruby</b> </td>
+          <td> <b> {{ details.name }} </b> </td>
         </tr>
 
         <tr>
           <td> Tiobe index </td>
-          <td> 13 (March 2023)</td>
+          <td *ngIf="details.tiobeIndex">
+            <fa-icon *ngIf="details.tiobeIndex.status === globalTiobeStatus.UP" [icon]="upIcon" style="color: rgb(117, 155, 99)"></fa-icon>
+            <fa-icon *ngIf="details.tiobeIndex.status === globalTiobeStatus.SUPER_UP" [icon]="upIcon" style="color: rgb(52, 180, 40);"></fa-icon>
+
+            <fa-icon *ngIf="details.tiobeIndex.status === globalTiobeStatus.DOWN" [icon]="downIcon" style="color: orange"></fa-icon>
+            <fa-icon *ngIf="details.tiobeIndex.status === globalTiobeStatus.SUPER_DOWN" [icon]="downIcon" style="color: orangered;"></fa-icon>
+
+            {{ details.tiobeIndex.rank }} (March 2023)
+          </td>
+          <td *ngIf="!(details.tiobeIndex)"> Undefined </td>
         </tr>
 
-        <tr>
+        <tr *ngIf="details.firstAppeared">
           <td> First appeared </td>
-          <td> 1995</td>
+          <td> {{ details.firstAppeared }}</td>
         </tr>
 
-        <tr>
+        <tr *ngIf="details.website">
           <td> Website </td>
-          <td id="website"><a title="Go to" href="https://www.ruby-lang.org/pl/" target="_blank"> https://www.ruby-lang.org/pl/ </a> </td>
+          <td id="website"><a title="Go to" [href]="details.website" target="_blank"> {{ details.website }}</a> </td>
         </tr>
 
-        <tr>
+        <tr *ngIf="details.stableRelease">
           <td> Stable release </td>
-          <td> 3.2.2 (30 March 2023) </td>
+          <td> {{ details.stableRelease }} </td>
         </tr>
 
-        <tr>
+        <tr *ngIf="details.fileExtensions">
           <td> File extensions </td>
-          <td> .rb </td>
+          <td> {{ details.fileExtensions }} </td>
         </tr>
 
-        <tr>
+        <tr *ngIf="details.implementations">
           <td> Implementations </td>
-          <td> Ruby MRI, JRuby, Rubinius, IronRuby, MagLev, MacRuby, RubyMotion, mruby </td>
+          <td> {{ details.implementations }} </td>
         </tr>
 
-        <tr>
+        <tr *ngIf="details.paradigms">
           <td> Paradigms </td>
-          <td> Many paradigms </td>
-        </tr>
-
-        <tr>
-          <td> Typing </td>
-          <td> Dynamic</td>
+          <td> {{ details.paradigms }} </td>
         </tr>
       </table>
   </div>
@@ -57,56 +61,17 @@
       <button (click)="showTrends()" #trendsButton> Trends </button>
     </div>
 
-    <div id="description" #description>
-      Ruby is an interpreted, high-level, general-purpose programming language which supports multiple programming paradigms. It was designed with an emphasis on programming productivity and simplicity. In Ruby, everything is an object, including primitive data types. It was developed in the mid-1990s by Yukihiro "Matz" Matsumoto in Japan.
-
-Ruby is dynamically typed and uses garbage collection and just-in-time compilation. It supports multiple programming paradigms, including procedural, object-oriented, and functional programming. According to the creator, Ruby was influenced by Perl, Smalltalk, Eiffel, Ada, BASIC, Java and Lisp.[11][3]
-    </div>
+    <div id="description" #description [innerHTML]="details.description"></div>
 
     <div id="trends" #trends>
-      <div>
+      <div *ngFor="let trend of details.trendsList">
         <p class="repoName" title="See the repository">
           <fa-icon class="githubIcon" [icon]="githubIcon"></fa-icon>&nbsp;
-          <a href="https://github.com/chatwoot/chatwoot" target="_blank"> chatwoot / chatwoot</a>
+          <a [href]="trend.linkToRepository" target="_blank"> {{ trend.repositoryName }} </a>
         </p>
-        <p class="repoDesc"> Open-source customer engagement suite, an alternative to Intercom, Zendesk, Salesforce Service Cloud etc. firespeech_balloon</p>
-        <p class="repoStairs"> 15,080 stairs </p>
-      </div>
 
-      <div>
-        <p class="repoName" title="See the repository">
-          <fa-icon class="githubIcon" [icon]="githubIcon"></fa-icon>&nbsp;
-          <a href="https://github.com/chatwoot/chatwoot" target="_blank"> mrsked / mrsk</a>
-        </p>
-        <p class="repoDesc"> Deploy web apps anywhere. </p>
-        <p class="repoStairs"> 5238 stairs </p>
-      </div>
-
-      <div>
-        <p class="repoName" title="See the repository">
-          <fa-icon class="githubIcon" [icon]="githubIcon"></fa-icon>&nbsp;
-          <a href="https://github.com/chatwoot/chatwoot" target="_blank"> spree / spree</a>
-        </p>
-        <p class="repoDesc"> Open Source multi-language/multi-currency/multi-store eCommerce platform </p>
-        <p class="repoStairs"> 12,227 stairs </p>
-      </div>
-
-      <div>
-        <p class="repoName" title="See the repository">
-          <fa-icon class="githubIcon" [icon]="githubIcon"></fa-icon>&nbsp;
-          <a href="https://github.com/chatwoot/chatwoot" target="_blank"> rapid7 / metasploit-framework</a>
-        </p>
-        <p class="repoDesc"> Metasploit Framework </p>
-        <p class="repoStairs"> 30,116 stairs </p>
-      </div>
-
-      <div>
-        <p class="repoName" title="See the repository">
-          <fa-icon class="githubIcon" [icon]="githubIcon"></fa-icon>&nbsp;
-          <a href="https://github.com/chatwoot/chatwoot" target="_blank"> getsentry / sentry-ruby</a>
-        </p>
-        <p class="repoDesc"> Sentry SDK for Ruby </p>
-        <p class="repoStairs"> 876 </p>
+        <p class="repoDesc"> {{ trend.description }} </p>
+        <p class="repoStars"> Stars<br> Total: {{ trend.totalStars }} | Monthly: {{ trend.monthlyStars }} </p>
       </div>
     </div>
   </div>
