--- a/Frontend/src/app/components/main/main.component.html
+++ b/Frontend/src/app/components/main/main.component.html
@@ -1,26 +1,7 @@
 <main>
   <div id="list">
-    <button class="lang" [routerLink]="['/lang', 'C++']">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/213px-ISO_C%2B%2B_Logo.svg.png">
-    </button>
-
-    <button class="lang">Lua</button>
-    <button class="lang">Assembler</button>
-    <button class="lang">Cobol</button>
-    <button class="lang">JavaScript</button>
-    <button class="lang">Fortran</button>
-    <button class="lang">Java</button>
-    <button class="lang">C#</button>
-    <button class="lang">C#</button>
-    <button class="lang">F#</button>
-    <button class="lang">Python</button>
-
-    <button class="lang" [routerLink]="['/lang', 'Ruby']">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/240px-Ruby_logo.svg.png">
-    </button>
-
-    <button class="lang" [routerLink]="['/lang', 'V']">
-      <img src="https://vlang.io/img/v-logo.png">
+    <button *ngFor="let language of languages" class="lang" [routerLink]="['/lang', language.name]">
+      <img [src]="language.thumbnailPath">
     </button>
   </div>
 </main>
