THe missing Header implementation and additional image

--- a/Frontend/src/app/components/header/header.component.html
+++ b/Frontend/src/app/components/header/header.component.html
@@ -1,7 +1,4 @@
 <header>
-  <button> Random language </button>
-  <button> Tiobe index </button>
-  <p routerLink=""> ProgrammingLanguages </p>
-  <button> Github projects</button>
-  <a href="https://github.com/Tiguarces/ProgrammingLanguages" target="_blank"> Project Repository</a>
+  <a routerLink="/"> <fa-icon [icon]="homeIcon"></fa-icon> </a>
+  <a href="https://github.com/Tiguarces/ProgrammingLanguages" target="_blank" title="Project repository"> <fa-icon [icon]="githubIcon"></fa-icon> </a>
 </header>
